Fixed bugs, initial tests are held on the site

--- a/231206.0/ru.yaml
+++ b/231206.0/ru.yaml
@@ -1,2 +1,4 @@
-introduction: "Введение 231206.0"
+introduction: "Введение"
 free-structures: "Свободные структуры"
+package-manager: "Пакетный менеджер"
+project-structure: "Структура проекта"
