--- a/231206.0/en.yaml
+++ b/231206.0/en.yaml
@@ -1,1 +1,4 @@
-introduction: "Introduction 231206.0"
+introduction: "Introduction"
+free-structures: "Free Structures"
+package-manager: "Package Manager"
+project-structure: "Project Structure"
