--- a/241201/en.yaml
+++ b/241201/en.yaml
@@ -1,1 +1,18 @@
-introduction: "todo"
+introduction: "Introduction"
+realtime: "Real-time"
+syntax: "Syntax"
+semantics: "Semantics"
+ownership: "Ownership"
+mutability: "Mutability"
+primitives: "Primitives"
+ternary-logic: "Ternary Logic"
+indeterminate-behavior: "Indeterminate Behavior"
+operators: "Operators"
+structures: "Structures"
+methods: "Methods"
+package-manager: "Package Manager"
+packages: "User Packages"
+project-structure: "Project Structure"
+branching: "Conditional Branching"
+loops: "Loops and Iteration"
+
